tests/baselines/reference/checkJsxChildrenProperty16.errors.txt
checkJsxChildrenProperty16.tsx(5,1): error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.


==== checkJsxChildrenProperty16.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    // repro from #53493
    
    import React = require('react');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
    
    export type Props =
      | { renderNumber?: false; children: (arg: string) => void }
      | {
          renderNumber: true;
          children: (arg: number) => void;
        };
    
    export declare function Foo(props: Props): JSX.Element;
    
    export const Test = () => {
      return (
        <>
          <Foo>{(value) => {}}</Foo>
          <Foo renderNumber>{(value) => {}}</Foo>
    
          <Foo children={(value) => {}} />
          <Foo renderNumber children={(value) => {}} />
        </>
      );
    };